# summariser

./: .gitignore  main.py  pdf_processor.py  pyproject.toml
