[tool.poetry]
name = "insurance"
version = "0.1.0"
description = ""
authors = ["Dhanasekar <dhanasekars@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pypdf2 = "^3.0.1"
transformers = "^4.38.2"
tensorflow = "^2.16.1"
flax = "^0.8.2"
torch = "^2.2.1"
torchvision = "^0.17.1"
tf-keras = "^2.16.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
